public/CSS/homepage/block.css
.block {
    padding: 2rem;
    text-align: center;
}

.block h2 {
    color: #fff;
    font-size: 3rem;
    font-weight: 800;
    margin: 0;
    padding-bottom: .5rem;
}

.block #block-text {
    color: #fff;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.block .stats {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
    align-items: center;
    gap: 1rem;
    text-align: center;
    color: #fff;
}

.block .stats .block-stat h3 {
    color: #fff;
    font-weight: 800;
    font-size: 1.7rem;
}

